--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -181,8 +181,10 @@
 
         const whiteWins = s.getWinner(state)
         if (whiteWins !== null) {
-          log.innerHTML += (whiteWins ? 'White' : 'Black') + ' wins!';
+          const message = (whiteWins ? 'White' : 'Black') + ' wins!';
+          log.innerHTML += message;
           btn.setAttribute('disabled', 'disabled')
+          if (!alert(`${message}\nPlay again?`)) window.location.reload()
         } else {
           generateAndLogCurrentMoves()
           btn.removeAttribute('disabled')
