--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Checkers</title>
+  <title>Checkers | Player vs. AI</title>
   <link rel="shortcut icon" type="image/png" href="/assets/image/favicon.png" />
   <link rel="apple-touch-icon" href="/assets/image/favicon.png" />
   <link rel="stylesheet" href="/assets/style/main.css" />
