refac: migrate scripts to js assets folder

--- a/ai-vs-ai/index.html
+++ b/ai-vs-ai/index.html
@@ -48,9 +48,9 @@
 
   <script type="module">
 
-    import * as mm from './minimax.js'
-    import * as gs from './game-state.js'
-    import * as bo from './board.js'
+    import * as mm from '/assets/js/minimax.js'
+    import * as gs from '/assets/js/game-state.js'
+    import * as bo from '/assets/js/board.js'
 
     function qs(s) { return document.querySelector(s); }
 
