--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html>
 
 <head>
-  <title>Temporary</title>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; URL=/player-vs-ai" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Checkers</title>
+  <link rel="shortcut icon" type="image/png" href="/assets/image/favicon.png" />
+  <link rel="apple-touch-icon" href="/assets/image/favicon.png" />
+  <link rel="stylesheet" href="/assets/style/main.css" />
+  <link rel="stylesheet" href="/assets/style/reset.css" />
 </head>
 
 <body>
-  <p>This page has been moved. If you were not redirected, click <a href="/player-vs-ai/index.html">here</a> to go
-    to the player vs AI.</p>
+  <main>
+    <h1>Checkers</h1>
+
+    <div class="btn-group" style="margin-top: 24px; max-width: 256px;">
+      <a href="/ai-vs-ai/" class="btn-primary">AI vs.AI</a>
+      <a href="/player-vs-ai/" class="btn-primary">Player vs. AI</a>
+    </div>
+  </main>
 </body>
 
 </html>
