--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -92,11 +92,11 @@
 
     // TODO test with mm.Minimax(true, ...) just to make sure
 
-    import * as s from './game-state.js'
-    import * as bo from './board.js'
-    import * as gfx from './board-render.js'
-    import * as mov from './move-generation.js'
-    import * as mm from './minimax.js'
+    import * as s from '/assets/js/game-state.js'
+    import * as bo from '/assets/js/board.js'
+    import * as gfx from '/assets/js/board-render.js'
+    import * as mov from '/assets/js/move-generation.js'
+    import * as mm from '/assets/js/minimax.js'
 
     /* testing sameColorPieceClusters
     const board = bo.decodeBoard(`x.x.x.x.
