add BoardView class to replace board-render.js functions

--- a/ai-vs-ai/index.html
+++ b/ai-vs-ai/index.html
@@ -84,6 +84,7 @@
       let i = 0
 
       // TODO detect when the AI gets stuck (store all previous states in a set, stop when seeing some state for the 10th time or something)
+      // nvdd utilizar regras de empate do https://midiasstoragesec.blob.core.windows.net/001/2019/04/cbjd-regras-damas-010113.pdf
 
       console.log('Playing...')
       while (gs.getWinner(state) === null) {
