refac: change to arrow function

--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -218,8 +218,8 @@
         }
       })
 
-      minimaxWorker.addEventListener('message', function (e) {
-        evalAction(e.data.action)
+      minimaxWorker.addEventListener('message', (event) => {
+        evalAction(event.data.action)
       }, false)
     }
   </script>
